--- a/MVCLaboratorio.csproj
+++ b/MVCLaboratorio.csproj
@@ -78,7 +78,10 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Views\Home\Index.aspx" />
+    <Content Include="Views\Video\All.aspx" />
     <Content Include="Views\Video\Create.aspx" />
+    <Content Include="Views\Video\Delete.aspx" />
+    <Content Include="Views\Video\Edit.aspx" />
     <Content Include="Views\Video\Index.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
