--- a/Web.config
+++ b/Web.config
@@ -7,7 +7,7 @@
 
 <configuration>
   <connectionStrings>
-    <add name ="cnn" connectionString ="data source=SALA2-E05\SQLEXPRESS;user id=sa;password=Express;initial catalog=ESCUELA"/>
+    <add name ="cnn" connectionString ="data source=ALFOONZO09;user id=sa;password=Express;initial catalog=maestro"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
